# perp_cli_curie

./: .gitignore  Cargo.toml  README.md
src/: address_list.rs  addresses.rs  amm.rs  args.rs  close.rs  config.rs  contracts.rs  deposit.rs  lib.rs  main.rs  metadata.rs  open.rs  open2.rs  portfolio.rs  position.rs  quit.rs  swap.rs  tokens.rs  utils.rs  withdraw.rs
src/abis/: AddressList.json  IAccountBalance.json  IAccountBalanceABI.rs  IAddressList.rs  IBaseToken.json  IBaseTokenABI.rs  IClearingHouse.json  IClearingHouseABI.rs  ICollateralManager.json  ICollateralManagerABI.rs  IExchange.json  IExchangeABI.rs  IMarketRegistry.json  IMarketRegistryABI.rs  IOrderBook.json  IOrderBookABI.rs  IPerpPortal.json  IPerpPortal.rs  IPoolABI.rs  IQuoteTokenABI.rs  IVault.json  IVaultABI.rs  IVelodromeRouter.json  mod.rs
