[package]
name = "perp"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "CLI for Perpetual Protocol v2 Curie built with Rust"
readme = "README.md"
repository = "https://github.com/brendanwenzel/perp_cli_curie"
homepage = "https://perp.com"
keywords = ["cli", "perps", "trading", "rust"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["cli"] }
log = "0.4.17"
env_logger = "0.10.0"
eyre = { version = "0.6" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
ethers = { version = "1.0.2", features = [ "abigen", "ws", "rustls" ] }
directories = "4.0.1"
toml = "0.5.10"
rust_decimal = { version = "1.28.0", features = [ "maths" ] }
rust_decimal_macros = "1.28.0"

[lib]
name = "perpcli_rs"
path = "src/lib.rs"
doctest = false
